src/app/movie-poll-item/movie-poll-item.component.scss
$posterWidth: min(27vw, 150px);
$posterHeight: calc(3 / 2 * $posterWidth);

:host {
  display: flex;
  justify-content: space-between;
  width: 100%;
  position: relative;

  .content {
    position: relative;
    display: flex;
    flex-direction: column;
    flex: 1;
    padding-left: calc(#{$posterWidth} - 20px);
  }

  .controls {
    margin-bottom: auto;
    margin-top: 32px;
    padding-left: 10px;
    min-width: 50px;
  }

  .option-card {
    background-image: linear-gradient(
      -225deg,
      #69eacb29 0%,
      #eaccf83d 48%,
      #6654f114 100%
    );
    min-height: calc(1 * $posterHeight);
    width: 100%;
    display: flex;
    align-items: center;
    padding: 17px 16px 10px 16px;
    margin: 13px 0 7px 20px;

    & > div {
      width: 100%;
    }

    &.loader-bg {
      height: 275px;

      .loader {
        margin-left: auto;
        margin-right: auto;
      }
    }
  }

  .poster-container {
    position: absolute;
    top: -19px;
    left: -22px;
    z-index: 2;
    border-radius: 6px;
    width: $posterWidth;
    background-size: cover;
    background-image: url("../../assets/img/poster-placeholder.png");
  }

  .poster {
    width: $posterWidth;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
    margin-bottom: 19px;
    border-radius: 5px;

    &-placeholder {
      height: $posterHeight;
    }
  }

  .title {
    line-height: 1.05em;
    margin-bottom: 7px;
    font-size: 1.2em;
    padding-bottom: 5px;
    flex: 1;
  }

  .original-title {
    font-size: 0.7em;
  }

  .movie-info {
    min-height: 50px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
  }

  .extra-info {
    font-size: 11px;
    letter-spacing: 1px;
    text-transform: uppercase;
    // font-family: Roboto, sans-serif;
  }

  .subtitle {
    display: flex;
    flex-wrap: wrap;
    font-size: 0.75em;

    .basics {
      padding-right: 10px;
      line-height: 0.7em;
      display: flex;
      align-items: center;
      width: 100%;
      padding-bottom: 7px;
    }
  }

  .separator {
    padding: 0 4px;
  }

  .overview {
    font-size: 0.7em;
    $line-height: 1.2em;
    line-height: $line-height;

    &.shortened {
      height: calc(3 * $line-height);
      overflow: hidden;
    }

    &.full {
      padding-top: 30px;
    }
  }

  .movie-ratings {
    margin: 0;
    display: flex;
    flex-wrap: wrap;
    width: 100%;

    .movie-rating {
      display: flex;
      font-size: 0.6em;
      font-family: "Product Sans Bold";
      border-radius: 2px;
      background-color: #6cd577;
      padding: 1px 6px;
      margin: 2px;

      &.imdb {
        background-color: #f5c532;
        color: black;
      }

      &.meta-critic {
        color: white;
        &.green {
          background-color: #6acc34;
        }

        &.yellow {
          background-color: #facc33;
        }

        &.red {
          background-color: #ea3f33;
        }
      }

      &.rotten-tomatoes {
        background-color: #ea3f33;
        color: white;
      }

      mat-icon {
        padding-left: 5px;
      }
    }
  }

  .genres {
    display: flex;
    flex-wrap: wrap;
    margin: 5px 0 5px;

    .genre {
      font-size: 0.6em;
      padding: 2px 10px;
      border-radius: 11px;
      background-image: linear-gradient(225deg, #eecafd 0%, #64d3e3 100%);
      color: white;
      margin: 0 3px 5px;
    }
  }

  .show-more {
    text-transform: uppercase;
    font-size: 0.5em;
    width: 100%;
    text-align: center;
    color: #ccc;
    padding-bottom: 10px;
    padding-top: 9px;

    flex-grow: 1;
    align-items: flex-end;
    justify-content: center;
    display: flex;
  }

  .bg {
    position: absolute;
    top: 13px;
    left: 0;
    height: 3px;
    width: 0%;
    background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
    background-size: 100vw;
    opacity: 0.5;
    transition: all 2s ease !important;
    z-index: 1;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
  }

  .flex {
    display: flex;
  }

  .flex-column {
    display: flex;
    flex-direction: column;
  }

  .creator {
    position: relative !important;
    top: unset !important;
    right: unset !important;
  }

  .reactions {
    & > * {
      margin-left: 3px;
    }

    min-height: 14px;
    margin-left: -16px;
    padding: 0 58px 16px 77px;
    margin-right: -16px;
    margin-bottom: -10px;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    justify-content: flex-end;
    flex-wrap: wrap;

    &.reactions-disabled {
      padding-right: 16px;
    }

    &:empty {
      background: unset;
    }

    .reaction {
      position: relative;
      z-index: 0;
      min-height: 25px;
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 1px 7px;
      border-radius: 9999px;
      font-size: 13px;
      margin-top: 5px;
      color: #58565a;
      background: #ffffffe8;
      user-select: none;

      &.unreacted {
        filter: grayscale(100%) opacity(0.5);
        // background: unset;
      }

      .label {
        position: relative;
        bottom: 1px;
      }

      &.has-reacted {
        &:before {
          content: "";
          position: absolute;
          z-index: -1;
          inset: 0;
          padding: 2px;
          border-radius: 99999px;
          background-image: linear-gradient(
            -225deg,
            #ac32e4a8 0%,
            #7918f2d4 37%,
            #7092e6e6 100%
          );
          -webkit-mask: linear-gradient(#fff 0 0) content-box,
            linear-gradient(#fff 0 0);
          mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
          -webkit-mask-composite: xor;
          mask-composite: exclude;
        }
      }

      .count {
        position: relative;
        right: -3px;
        font-size: 14px;
        min-width: 16px;
        padding-left: 1px;
        text-align: center;
      }
    }
  }

  .movie-reactions {
    display: flex;
    justify-content: space-around;
    align-items: center;
    position: absolute;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    bottom: 0;
    width: $posterWidth;
    font-size: 17px;
    padding: 0 0 4px;
    box-shadow: 1px 1px 11px 0px #0000000f;
    background-image: linear-gradient(0deg, #484747d9 75%, transparent);
    background-position-y: 65px;
    background-size: calc($posterWidth + 20px) 66px;
    transition: height 0.4s ease-out, opacity 0.4s ease-in-out;
    height: 39px;
    overflow: hidden;
    opacity: 1;

    .reaction {
      position: relative;
      user-select: none;
      padding: 6px 0;
      transition: all 0.6s ease;
      display: flex;
      flex-direction: column;
      margin-bottom: auto;
      align-items: center;
    }

    .fa-solid {
      position: relative;
      z-index: 1;
      text-shadow: 0 0 4px #5e5e5e4a;
    }

    .reacted .count {
      background-image: linear-gradient(225deg, #b929f3 0%, #08b9d3 100%);
    }

    .count {
      &.has-votes {
        font-size: 10px;
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 9999px;
        // background-image: linear-gradient(7deg, #bb59e3 0%, #64d3e3 100%);
        color: white;
        min-width: 3ch;
        height: 12px;
        opacity: 1;
        margin-top: 3px;
      }
    }

    &:not(.open) {
      background-position-y: 0;
      height: 28px;
      padding: 0;
      opacity: 0.5;

      .reaction {
        max-height: 17px;

        i {
          opacity: 1;
        }
      }

      .count {
        opacity: 0;
      }
    }
  }

  .top-row-controls {
    top: 12px;
  }

  textarea {
    padding: 12px 20px;
    box-sizing: border-box;
    border: 0px solid #d9c6ee;
    border-radius: 4px;
    background-color: #ffffffb0;
    font-size: 12px;
    resize: none;
    width: 100%;
    margin: 15px 10px 5px;
  }

  .has-description {
    color: #d9c6ee;
  }

  .description {
    font-family: "Fira Sans", sans-serif;
    margin: 11px 5px;
    line-height: 23px;
    word-break: break-word;

    a.outside-link {
      background: #b9b6ec;
      color: white;
      padding: 2px 7px;
      border-radius: 99999px;
    }

    & > span {
      padding: 0 3px;
    }
  }

  .description-button {
    width: 100px;
    text-align: center;
    padding: 3px 15px;
    margin-top: 10px;
    margin-left: auto;
    margin-right: auto;
    background: #d9c6ee;
    border-radius: 26px;
  }

  .gradient-divider {
    background-image: linear-gradient(
      -225deg,
      #ac32e4 0%,
      #7918f2 37%,
      #7092e6 100%
    );
    height: 2px;
    margin-left: -16px;
    margin-right: -16px;
  }

  .available-reactions {
    position: absolute;
    bottom: 10px;
    right: 10px;
    width: 35px;
    padding: 3px 3px 3px 4px;
    background-color: #ffffffd4;
    border-radius: 99999px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    max-height: 35px;
    min-height: 35px;
    overflow-y: hidden;
    transition: max-height ease 0.5s, background-color ease 0.3s;
    justify-content: flex-end;
    user-select: none;

    & .scroll {
      width: 100%;
      display: flex;
      flex-direction: column;
      align-items: center;
      text-align: center;
    }

    & .scroll > *:not(:last-child) {
      margin-bottom: 9px;
      font-size: 23px;
      position: relative;
      user-select: none;
      z-index: 1;
      width: 31px;
    }

    .add-btn {
      color: #ccc;
      bottom: 6px;
      margin-top: 6px;
      position: relative;
      user-select: none;
    }

    &.open {
      max-height: 160px;
      background-color: white;
      padding-top: 5px;

      .scroll {
        overflow-y: auto;
      }

      .add-btn {
        color: transparent;
        transition: ease 0.6s;
      }
    }
  }
}

/* Hide scrollbar for Chrome, Safari and Opera */
.hidden-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.hidden-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.tagline {
  font-family: "Fira Sans", sans-serif;
  font-size: 1.3em;
  margin-bottom: 10px;
}

.with-launch-icon {
  margin: 0 3px;
}

.user-select-none {
  user-select: none;

  &::before,
  &::after {
    user-select: none;
  }
}

.backdrop {
  height: 190px;
  background-size: contain;
}

// Movie rating chart
$donut-center-color: #09083a;
$donut-font-weight: 700;

.chart {
  position: absolute;
  z-index: 3;
  top: -3px;
  right: 3px;
}

// Chart base
.donut-chart {
  position: relative;
  border-radius: 50%;

  &:before,
  &:after {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
  }

  &:before {
    border-radius: 50%;
    background: $donut-center-color;
    content: "";
  }

  &:after {
    font: {
      weight: $donut-font-weight;
    }
    z-index: 1;
  }
}

.director {
  font-family: "Product Sans Bold";
}

:root {
  --var: 31;
}

// Donut chart mixin
@mixin donut-chart(
  $name,
  $size,
  $val,
  $base-color,
  $val-color,
  $center-color: null
) {
  $perc: calc(val($val, 50) * 3.6);

  // Donut chart
  [data-chart="#{$name}"] {
    .donut-chart {
      width: $size;
      height: $size;
      background-color: $base-color;
      background: conic-gradient(
        $val-color 0deg,
        $val-color #{$perc}deg,
        $base-color #{$perc}deg
      );

      &:before {
        width: $size / 1.5;
        height: $size / 1.5;
        @if $center-color {
          background-color: $center-color;
        }
      }

      &:after {
        content: "#{$val}%";
        color: $base-color;
        font-size: $size / 3.5;
      }
    }
  }
} // End donut chart mixin

@include donut-chart("3", 35px, var(--var, 50), #fff, #f2cd5c);

